# music-link-converter

./: .gitignore  README.md  example.env  musiclinkconvert.py  pyproject.toml  requirements.txt
lib/: spotify.py  tidal.py
music_services/: search.py  utils.py
